# sample-agentic-platform

./: .gitignore  DEPLOYMENT-v2.md  HOW_TO_CREATE_NEW_AGENT.md  docker-compose.yaml  pyproject.toml
bootstrap/: README-v2.md  agentcore-platform-bootstrap.yaml  enable-code-server-on-bastion.md
deploy/: README-v2.md  build-container.sh  deploy-agent.sh
docs/: NEW_AGENT_DEPLOYMENT_GUIDE-v2.md  TESTING_GUIDE_AGENTIC_CHAT_ENHANCED.md
infrastructure/: README.md
labs/: AGENTS.md  README.md  pyproject.toml
labs/labs_common/: __init__.py  model_config.py  prompt.py
labs/module1/: README.md
labs/module1/notebooks/: 1_setup_and_basics.ipynb  2_langgraph_basics.ipynb  3_chain_of_thought.ipynb  4_few_shot_examples.ipynb  5_rag_basics.ipynb  6_function_calling.ipynb  7_evaluation.ipynb
labs/module2/: README.md
labs/module2/notebooks/: 1_setup.ipynb  2_prompt_chaining.ipynb  3_routing.ipynb  4_parallelization.ipynb  5_orchestrator.ipynb  6_evaluator_optimizer.ipynb
labs/module3/: README.md
labs/module3/notebooks/: 1_setup.ipynb  2_agent_memory.ipynb  3_agent_tools.ipynb  4_agent_retrieval.ipynb  5_agent_frameworks.ipynb
labs/module4/: README.md
labs/module4/notebooks/: 1_mcp.ipynb  2_multi-agent-delegation.ipynb  3_multi-agent-graph.ipynb  5_agentcore_tool_browser.ipynb
labs/module4/notebooks/mcp_servers/weather_server/: README.md
labs/module5/: README.md
labs/module5/notebooks/: 1_otel_telemetry.ipynb  2_llm_gateway.ipynb  3_agent_evaluation.ipynb  4_streaming.ipynb  99999_llm_gateway.ipynb
my-analysis/: README.md  SUMMARY-deploy.md  SUMMARY-k8s.md  (+7 more)
(+103 files in other folders)
