[project]
name = "labs-common"
version = "0.1.0"
description = "Shared utilities for the Agentic Program labs (model IDs, etc.)"
requires-python = "==3.12.8"
dependencies = []

[tool.setuptools]
packages = ["labs_common"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
